2007-07-04  H.J. Lu  <hongjiu.lu@intel.com>

	* peicode.h (pe_bfd_object_p): Don't check PE vs. EFI target
	if arch is unknown.

2007-07-04  Nick Clifton  <nickc@redhat.com>

	Import this patch from an internal tree:
	
	2001-07-17  Richard Henderson  <rth@redhat.com>

	* elf32-mep.c (mep_final_link_relocate) [R_MEP_HI16S]: Correctly
	compensate for high bit set in R_MEP_LOW16.

2007-07-03  Joseph Myers  <joseph@codesourcery.com>

	* elf32-arm.c (elf32_arm_merge_eabi_attributes): Copy type from
	input attributes if value has been copied.

2007-07-03  Nick Clifton  <nickc@redhat.com>

	* COPYING: Replace with GPLv3 text.
	* aix386-core.c: Update copyright notice to refer to GPLv3.
	* aix5ppc-core.c, aout0.c, aout32.c, aout64.c, aout-adobe.c,
	aout-arm.c, aout-cris.c, aoutf1.h, aout-ns32k.c, aout-sparcle.c,
	aout-target.h, aout-tic30.c, aoutx.h, archive64.c, archive.c,
	archures.c, armnetbsd.c, bfd.c, bfd-in.h, bfdio.c, bfdwin.c,
	binary.c, bout.c, cache.c, cf-i386lynx.c, cf-sparclynx.c,
	cisco-core.c, coff64-rs6000.c, coff-alpha.c, coff-apollo.c,
	coff-arm.c, coff-aux.c, coffcode.h, coffgen.c, coff-go32.c,
	coff-h8300.c, coff-h8500.c, coff-i386.c, coff-i860.c, coff-i960.c,
	coff-ia64.c, cofflink.c, coff-m68k.c, coff-m88k.c, coff-maxq.c,
	coff-mcore.c, coff-mips.c, coff-or32.c, coff-pmac.c, coff-ppc.c,
	coff-rs6000.c, coff-sh.c, coff-sparc.c, coff-stgo32.c,
	coff-svm68k.c, coffswap.h, coff-tic30.c, coff-tic4x.c,
	coff-tic54x.c, coff-tic80.c, coff-u68k.c, coff-w65.c,
	coff-we32k.c, coff-x86_64.c, coff-z80.c, coff-z8k.c, corefile.c,
	cpu-alpha.c, cpu-arc.c, cpu-arm.c, cpu-avr.c, cpu-bfin.c,
	cpu-cr16.c, cpu-cr16c.c, cpu-cris.c, cpu-crx.c, cpu-d10v.c,
	cpu-d30v.c, cpu-dlx.c, cpu-fr30.c, cpu-frv.c, cpu-h8300.c,
	cpu-h8500.c, cpu-hppa.c, cpu-i370.c, cpu-i386.c, cpu-i860.c,
	cpu-i960.c, cpu-ia64.c, cpu-ia64-opc.c, cpu-ip2k.c, cpu-iq2000.c,
	cpu-m10200.c, cpu-m10300.c, cpu-m32c.c, cpu-m32r.c, cpu-m68hc11.c,
	cpu-m68hc12.c, cpu-m68k.c, cpu-m88k.c, cpu-maxq.c, cpu-mcore.c,