@@ -1,3 +1,8 @@
+2007-07-06  Michael Snyder  <msnyder@access-company.com>
+
+	* elflink.c (elf_link_add_object_symbols): Return via
+	error_free_vers on "notice" failure.
+
 2007-07-04  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* peicode.h (pe_bfd_object_p): Don't check PE vs. EFI target
@@ -6,7 +11,7 @@
 2007-07-04  Nick Clifton  <nickc@redhat.com>
 
 	Import this patch from an internal tree:
-	
+
 	2001-07-17  Richard Henderson  <rth@redhat.com>
 
 	* elf32-mep.c (mep_final_link_relocate) [R_MEP_HI16S]: Correctly
